<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/my_avatar"
            style="@style/CircleImage"
            android:layout_height="241dp"
            android:layout_width="241dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/my_photo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/biodata"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            app:layout_constraintEnd_toEndOf="@+id/my_avatar"
            app:layout_constraintStart_toStartOf="@+id/my_avatar"
            app:layout_constraintTop_toBottomOf="@+id/my_avatar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="18sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/my_email"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/action_back_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/back"/>
    </LinearLayout>
</ScrollView>